<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgC"
    tools:context=".CallingActivity">

    <ImageView
        android:id="@+id/callImg"
        android:layout_width="@dimen/threeDP"
        android:layout_height="@dimen/FortySp"
        android:contentDescription="@string/lala"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/callingtxt"
        android:textColor="@color/greenish"
        android:textSize="36sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/callImg"
        app:layout_constraintStart_toStartOf="@+id/callImg"
        app:layout_constraintTop_toBottomOf="@+id/callImg" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/random"
        android:textSize="@dimen/spThirty"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/callImg"
        app:layout_constraintEnd_toEndOf="@+id/callImg"
        app:layout_constraintStart_toStartOf="@+id/callImg"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/anywhere" />
</androidx.constraintlayout.widget.ConstraintLayout>